apisix/tests/api-routes/apisix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mock-api
spec:
  ingressClassName: apisix
  rules:
    - host: ingress.apisix.local
      http:
        paths:
          - backend:
              service:
                name: mock-api-v1
                port:
                  number: 8080
            path: /v1
            pathType: Exact
          - backend:
              service:
                name: mock-api-v2
                port:
                  number: 8080
            path: /v2
            pathType: Exact
