apisix/tests/api-routes/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - ../mock-api
  - apisix-route.yaml
  - apisix-ingress.yaml
